white space fixed

--- a/src/components/Hero/hero.module.css
+++ b/src/components/Hero/hero.module.css
@@ -91,7 +91,6 @@ h4 {
   width: 50vw;
   height: 50vw;
   min-width: 350px;
-  min-width: 350px;
   top: -128px;
   left: -10vw;
   border-radius: 764px;
@@ -102,11 +101,10 @@ h4 {
   /*hero section circle*/
 .bottomBlur {
   position: absolute;
-  width: 70vw;
+  width: 50vw;
   height: 50vw;
   min-width: 350px;
-  min-width: 250px;
-  top: 246px;
+ top: 246px;
   right: -25vw;
   border-radius: 764px;
   background: rgba(25, 55, 109, 0.9);
@@ -124,6 +122,7 @@ h4 {
     text-align: justify;
   
   }
+
   .description {
 
     padding-right:0 ;
