--- a/src/index.css
+++ b/src/index.css
@@ -12,8 +12,9 @@
   /* html {
     scroll-behavior: smooth;
   } */
-  body{
-    max-width:100vw;
+  body, html{
+    width:100%;
     height: 100vh;
     overflow-x: hidden;
+  
   }
